java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateParam5.pass
package org.netbeans.test.java.hints;

import java.util.List;

public abstract class CreateParam5 {
    
    private List<String> x;
    
    public void test(int a,List<String> foo) {
        foo = x;
    }
    
}
